# MyRenderer

./: CMakeLists.txt  README.md  debug.tga  output.tga  output_shadowmap.tga
src/: Camera.cpp  Camera.h  GL.cpp  GL.h  Material.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  main.cpp
